[package]
name = "codechain-logger"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]

[dependencies]
atty = "0.2"
colored = "1.6"
env_logger = "0.6.0"
lazy_static = "1.2"
log = "0.4.6"
parking_lot = "0.6.0"
sendgrid = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

