[package]
name = "memorydb"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <codechain@kodebox.io>"]
description = "in-memory implementation of hashdb"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
heapsize = "0.4"
codechain-crypto = { version = "0.1.0", path = "../../crypto" }
hashdb = { version = "0.1.1", path = "../hashdb" }
plain_hasher = { path = "../plain_hasher" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rlp = { version = "0.2.1", path = "../rlp" }
