[package]
name = "memorydb"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <hi@codechain.io>"]
description = "in-memory implementation of hashdb"
license = "GPL-3.0"
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
hashdb = { version = "0.1.1", path = "../hashdb" }
plain_hasher = "0.2"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
