[package]
name = "codechain-merkle"
version = "0.1.0"
authors = ["CodeChain Team <codechain@codechain.io>"]
edition = "2018"

[dependencies]
rand = "0.6.1"
hashdb = {path = "../hashdb" }
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
memorydb = { path = "../memorydb" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_derive = { path = "../rlp_derive" }
snap = "0.2"

[dev-dependencies]
journaldb = { path = "../journaldb" }
kvdb = { path = "../kvdb" }
kvdb-rocksdb = { path = "../kvdb-rocksdb" }
tempfile = "3.1.0"
trie-standardmap = { path = "../trie-standardmap" }
memorydb = {path = "../memorydb" }
