[package]
name = "codechain-merkle"
version = "0.1.0"
authors = ["CodeChain Team <codechain@codechain.io>"]

[dependencies]
elastic-array = "0.10"
rand = "0.6.1"
rustc-hex = "1.0"
hashdb = {path = "../hashdb" }
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = {path = "../rlp" }
codechain-types= {path = "../../types"}

[dev-dependencies]
trie-standardmap = { path = "../trie-standardmap" }
memorydb = {path = "../memorydb" }
