[package]
description = "Parity custom panic hook"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "panic_hook"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
backtrace = "0.3.2"
codechain-logger = { path = "../logger" }
my_internet_ip = "0.1.1"
get_if_addrs = "0.5.3"
