[package]
name = "patricia-trie"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.9"
log = "0.4.1"
rand = "0.5.3"
codechain-crypto = { path = "../../crypto" }
codechain-logger = { path = "../logger" }
codechain-types = { path = "../../primitives/codechain-types" }
hashdb = { version = "0.1.1", path = "../hashdb" }
rlp = { version = "0.2.1", path = "../rlp" }
triehash = { version = "0.1.0", path = "../triehash" }
memorydb = { version = "0.1.0", path = "../memorydb" }

[dev-dependencies]
trie-standardmap = { path = "../trie-standardmap" }
